--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lenis": "^1.3.15",
     "lucide-react": "^0.555.0",
     "next": "16.0.4",
+    "ogl": "^1.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0",
